<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">聚宝盆</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
	<string name="action_refresh">Refresh</string>
	
	<string name = "url_news">http://rss.sina.com.cn/news/marquee/ddt.xml</string>
	<string name = "url_finance">http://rss.sina.com.cn/roll/finance/hot_roll.xml</string>
	<string name = "url_sports">http://rss.sina.com.cn/roll/sports/hot_roll.xml</string>
	
	<string name = "tab_news">新闻要闻</string>
	<string name = "tab_finance">财经新闻</string>
	<string name = "tab_sports">体育新闻</string>
	
	<string name = "tab_market_price">市场报价</string>
	<string name = "tab_candle_chart">K线图</string>
	
	<string-array name="menu_array">
	    <item>北京石油</item>
        <item>最新资讯</item>
        <item>实时行情</item>
        <item>官方论坛</item>
        <item>我的账户</item>
    </string-array>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
	
    <string name="dialog_trade_title">建立市价单</string>
    <string name="dialog_trade_ok">确定</string>
    <string name="dialog_trade_cancel">取消</string>
    <string name="forum_url">http://114.215.102.36/bbs/index.php</string>
    <string name="shhjjys_url">http://114.215.102.36/news_and_market/market/shhjjys/item_new.json</string>
    
    <string name="trade_product">商品：</string>
    <string name="trade_product_item1">ULP1</string>
    <string name="trade_product_item2">ULP2</string>
    
    <string name="trade_method">卖出/买进：</string>
    <string name="trade_method1">卖出</string>
    <string name="trade_method2">买进</string>
    
    <string name="trade_number">数量：</string>
    <string name="trade_price">价格：</string>
    
    <string-array name="trade_price_array">
        <item>1</item>
		<item>5</item>
		<item>10</item>
		<item>15</item>
		<item>20</item>
		<item>25</item>
    </string-array>
</resources>
