<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:divider="?android:dividerVertical"
    android:orientation="vertical"
    android:showDividers="middle" >

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:drawableLeft="@drawable/ic_launcher"
        android:drawablePadding="8dp"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center_vertical"
        android:textSize="24sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="5dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:padding="12dp"
                    android:text="@string/trade_product"
                    android:textSize="18sp" />

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:padding="12dp"
                    android:orientation="horizontal"
                    android:layout_alignParentRight="true" >

                    <RadioButton
                        android:id="@+id/radio_item1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/trade_product_item1" />

                    <RadioButton
                        android:id="@+id/radio_item2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/trade_product_item2" />
                </RadioGroup>
            </RelativeLayout>
            
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="5dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:padding="12dp"
                    android:text="@string/trade_method"
                    android:textSize="18sp" />

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="12dp"
                    android:layout_alignParentRight="true" >

                    <RadioButton
                        android:id="@+id/radio_method1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/trade_method1" />

                    <RadioButton
                        android:id="@+id/radio_method2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/trade_method2" />
                </RadioGroup>
            </RelativeLayout>
            
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="5dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:padding="12dp"
                    android:text="@string/trade_number"
                    android:textSize="18sp" />
                
				<Spinner android:layout_width="150dp"
				    android:layout_height="wrap_content"
				    android:padding="12dp"
				    android:gravity="center_vertical"
				    android:layout_alignParentRight="true"
				    android:entries="@array/trade_price_array"/>
                
            </RelativeLayout>
            
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="5dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:padding="12dp"
                    android:text="@string/trade_price"
                    android:textSize="18sp" />
                
				<TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:padding="12dp"
                    android:text="6980"
                    android:textSize="18sp" 
                    android:layout_alignParentRight="true"/>
                
            </RelativeLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>